# Django5-WebBlog

./: .gitignore  README.md  pyproject.toml
blog/: admin.py  feeds.py  forms.py  models.py  urls.py  views.py
blog/static/css/: blog.css
blog/templates/blog/: base.html
blog/templates/blog/post/: detail.html  list.html
blog/templatetags/: blog_tags.py
django_blog/: settings.py  urls.py
